<resources>
    <string name="app_name">ClearSkies</string>

    <string name="search">Search</string>
    <string name="search_hint">Enter location name</string>
    <string name="refresh">Refresh</string>

    <string name="today">Today</string>
    <string name="next_7_days">Next 7 Days</string>

    <string name="weather_icon">weather icon</string>

    <string name="pop_text">PoP</string>
    <string name="humidity_text">Humidity</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="humidity">%d %%</string>
    <string name="temperature">%d\u00b0</string>
    <string name="icon">http://openweathermap.org/img/wn/%s.png</string>
    <string name="icon_4">http://openweathermap.org/img/wn/%s@4x.png</string>

    <string name="location_hint">Enter your location detail</string>
    <string name="go">Go!</string>

    <string name="accra_ghana">Accra Ghana</string>
</resources>