<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgWeatherIcon"
                android:layout_width="124dp"
                android:layout_height="124dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="48dp"
                tools:src="@drawable/a10d_svg"
                android:contentDescription="@string/weather_icon" />

            <TextView
                android:id="@+id/txtTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="36dp"
                android:textColor="@color/white"
                android:textSize="100sp"
                tools:text="25°" />

            <TextView
                android:id="@+id/txtWeatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTemperature"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="23sp"
                tools:text="Clouds &amp; Sun" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtWeatherDescription"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtHumidityHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/humidity_text"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtHumidityHeader"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="24dp"
                        android:textColor="@color/whiteWithOpacity"
                        android:textSize="27sp"
                        tools:text="35°" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtPOPHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/pop_text"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txtPoP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPOPHeader"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="24dp"
                        android:textColor="@color/whiteWithOpacity"
                        android:textSize="27sp"
                        tools:text="35°" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>