<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/bg_dotted" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/searchBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp">

                        <fragment android:id="@+id/search_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="44dp"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            />

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="18sp"
                        android:text="@string/go"
                        android:textColor="@color/white"
                        style="@style/RoundedButton"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/searchBox"
                    android:textColor="@color/grey_800"
                    android:textSize="22sp"
                    android:text="@string/accra_ghana"
                    android:gravity="center"/>


                <include
                    android:id="@+id/container_forecast"
                    layout="@layout/today_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtLocation"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="26dp" />

                <TextView
                    android:id="@+id/textViewForecastHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_forecast"
                    android:layout_marginStart="16dp"
                    android:text="@string/next_7_days"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewForecastHeader"
                    android:orientation="horizontal"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/daily_item" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@android:color/holo_red_light"
        app:cardCornerRadius="0dp"
        app:cardElevation="16dp"
        app:strokeColor="@android:color/holo_red_dark"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/txtNoInternet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Status code : 500 Internal server error!"
            app:drawableEndCompat="@android:drawable/stat_notify_error" />

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>